Refactor PSSE model to introduce internal classes for substations, improve CSV handling, and enhance impedance correction processing
Signed-off-by: Nicolas Rol <nicolas.rol@rte-france.com>